--- a/index.html
+++ b/index.html
@@ -56,28 +56,27 @@
         <main>
             <section class="banner">
                 <div class="banner-card">
-                    <img src="https://i.postimg.cc/Y9SMdz0P/John-Wick-3.jpg" alt="banner" class="banner-img">
+                    <img src="" alt="banner" class="banner-img" id="bannerImg">
 
                     <div class="card-content">
-                        <div class="card-info">
-                            <div class="genre">
+                        <div class="card-info" style="background-image: linear-gradient(to right, rgb(0,0,0,0),rgb(0,0,0,0.3),rgb(0,0,0,0));">
+                            <div class="genre" id="bannerGenre">
                                 <ion-icon name="film"></ion-icon>
-                                <span>Action/Thriller</span>
+                                <span></span>
                             </div>
 
-                            <div class="year">
+                            <div class="year" id="bannerYear">
                                 <ion-icon name="calendar"></ion-icon>
-                                <span>2019</span>
+                                <span></span>
                             </div>
 
-                            <div class="duration">
+                            <div class="duration" id="bannerDuration">
                                 <ion-icon name="time"></ion-icon>
-                                <span>2h 11min</span>
+                                <span></span>
                             </div>
 
-                            <div class="quality">4k</div>
                         </div>
-                        <h2 class="card-title">John Wick: Chapter 3 - Parabellum</h2>
+                        <h2 class="card-title" id="bannerName"></h2>
                     </div>
                 </div>
 
@@ -86,7 +85,7 @@
             <section class="movies">
                 <div class="filter-bar">
                     <div class="filter-dropdowns">
-                        <select name="genre" class="genre">
+                        <!-- <select name="genre" class="genre">
                             <option value="all genres">All Genres</option>
                             <option value="action">Action</option>
                             <option value="adventure">Adventure</option>
@@ -98,7 +97,7 @@
                             <option value="horror">Horror</option>
                             <option value="scifi">Sci-fi</option>
                             <option value="war">War</option>
-                        </select>
+                        </select> -->
 
                         <select name="year" class="year">
                             <option value="all years">All years</option>
@@ -107,6 +106,14 @@
                             <option value="2010-2019">2010-2019</option>
                             <option value="2000-2009">2000-2009</option>
                             <option value="1980-1999">1980-1999</option>
+                        </select>
+
+                        <select name="gridCount" class="gridCount" id="gridCount">
+                            <option value="21">Grid Count</option>
+                            <option value="21">21</option>
+                            <option value="42">42</option>
+                            <option value="63">63</option>
+                            <option value="84">84</option>
                         </select>
                     </div>
 
@@ -128,7 +135,14 @@
                     
                 </div>
 
-                <button class="load-more">LOAD MORE</button>
+                <div class="pagination">
+                    <button id="prevPage">Previous</button>
+                    <span id="pageIndicator">Page 1</span>
+                    <button id="nextPage">Next</button>
+                </div>
+                
+
+                <!-- <button class="load-more">LOAD MORE</button> -->
             </section>
 
             <section class="category" id="category">
@@ -173,7 +187,7 @@
 
                     <div class="category-card">
                         <img src="https://i.postimg.cc/XvX6Xq95/crime.jpg" alt="image" class="card-img">
-                        <div class="name">Crime</div>
+                        <div class="name">Crime </div>
                         <div class="total">20</div>
                     </div>
 
