--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
                 <div class="navbar-actions">
                     <form action="#" class="navbar-form">
-                        <input type="text" name="search" placeholder="I'm looking for..." class="navbar-form-search">
+                        <input type="text" name="search" placeholder="I'm looking for..." class="navbar-form-search" id="searchInput">
 
-                        <button class="navbar-form-btn">
+                        <button class="navbar-form-btn" id="searchBtn">
                             <ion-icon name="search"></ion-icon>
                         </button>
 
@@ -99,13 +99,14 @@
                             <option value="war">War</option>
                         </select> -->
 
-                        <select name="year" class="year">
-                            <option value="all years">All years</option>
+                        <select name="year" class="year" id="yearSelect">
+                            <option value="all">All years</option>
                             <option value="2024">2024</option>
-                            <option value="2020-2023">2020-2023</option>
-                            <option value="2010-2019">2010-2019</option>
-                            <option value="2000-2009">2000-2009</option>
-                            <option value="1980-1999">1980-1999</option>
+                            <option value="2020s">2020-2023</option>
+                            <option value="2010s">2010-2019</option>
+                            <option value="2000s">2000-2009</option>
+                            <option value="1990s">1990-1999</option>
+                            <option value="1980s">1980-1989</option>
                         </select>
 
                         <select name="gridCount" class="gridCount" id="gridCount">
@@ -122,7 +123,7 @@
                         <label for="featured">Featured</label>
 
                         <input type="radio" name="grade" id="popular">
-                        <label for="popular">Popular</label>
+                        <label for="popular">Highest Rated</label>
 
                         <input type="radio" name="grade" id="newest">
                         <label for="newest">Newest</label>
@@ -137,7 +138,7 @@
 
                 <div class="pagination">
                     <button id="prevPage">Previous</button>
-                    <span id="pageIndicator">Page 1</span>
+
                     <button id="nextPage">Next</button>
                 </div>
                 
@@ -149,53 +150,11 @@
                 <h2 class="section-heading">Category</h2>
 
                 <div class="category-grid">
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/JzfWFmfC/action.jpg" alt="image" class="card-img">
-                        <div class="name">Action</div>
-                        <div class="total">100</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/CKpxqjL8/comedy.jpg" alt="image" class="card-img">
-                        <div class="name">Comedy</div>
-                        <div class="total">50</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/3rfrBMxY/thriller.webp" alt="image" class="card-img">
-                        <div class="name">Thriller</div>
-                        <div class="total">20</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/HkXpdV4k/horror.jpg" alt="image" class="card-img">
-                        <div class="name">Horror</div>
-                        <div class="total">80</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/qRRVhRnn/adventure.jpg" alt="image" class="card-img">
-                        <div class="name">Adventure</div>
-                        <div class="total">100</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/15pmZ8K5/animated.jpg" alt="image" class="card-img">
-                        <div class="name">Animation</div>
-                        <div class="total">50</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/XvX6Xq95/crime.jpg" alt="image" class="card-img">
-                        <div class="name">Crime </div>
-                        <div class="total">20</div>
-                    </div>
-
-                    <div class="category-card">
-                        <img src="https://i.postimg.cc/8568BYKP/sci-fi.jpg" alt="image" class="card-img">
-                        <div class="name">Sci-fi</div>
-                        <div class="total">80</div>
-                    </div>
+                    <button id="all">
+                        <div class="category-card" style="font-size: 40px; font-weight: bold; padding-top: 50px;">
+                            <span>All</span>
+                        </div>
+                    </button>
                 </div>
             </section>
 
